# verkkosimulaatio

./: .gitignore  CMakeLists.txt  Meeting-notes.md  README.md  network.json
doc/: Doxyfile  Makefile  example-json.md  project_document.md
example-networks/: bad-link.json  small-one-bad-destination.json  small-split.json
plan/: Makefile  class-mockups-and-technical-explanations.md  default.bibtex  plan.md
src/: Application.cpp  Application.h  CMakeLists.txt  EndHost.cpp  EndHost.h  Link.cpp  Link.h  Network.cpp  Network.h  Node.cpp  Node.h  Packet.cpp  Packet.h  Queue.cpp  Queue.h  Router.cpp  Router.h  RoutingEndHost.cpp  RoutingEndHost.h  SimulationThread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/resources/: network.json
tests/: CMakeLists.txt  tst_networktest.cpp
